[workspace]
members = [".", "cool-*"]
resolver = "3"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
cool.path = "."
criterion = "0.5.1"
phf = { version = "0.11.3", features = ["macros"] }
pretty_assertions = "1.4.1"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
enum_glob_use = { level = "allow", priority = 2 }
wildcard_imports = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
must_use_candidate = { level = "allow", priority = 2 }

[package]
name = "cool"
version.workspace = true
edition.workspace = true

[dependencies]
phf.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
