[workspace]
members = [".", "coolc-bin", "runtime", "bench"]
default-members = [".", "coolc-bin"]
resolver = "3"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
cool.path = "."
cfg-if = "1.0.0"
clap = { version = "4.5.39", features = ["derive"] }
criterion = "0.5.1"
indoc = "2.0.6"
phf = { version = "0.11.3", features = ["macros"] }
pretty_assertions = "1.4.1"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
enum_glob_use = { level = "allow", priority = 2 }
wildcard_imports = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
must_use_candidate = { level = "allow", priority = 2 }
missing_errors_doc = { level = "allow", priority = 2 }
too_many_lines = { level = "allow", priority = 2 }
match_same_arms = { level = "allow", priority = 2 }
result_unit_err = { level = "allow", priority = 2 }

[package]
name = "cool"
version.workspace = true
edition.workspace = true

[dependencies]
phf.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
